tests/paczka1/fuzzy1/48080431.err
Error in line 1: Ns0d S496 95,0
Error in line 2: Ns0d A929 40,3
Error in line 8: gyeM5ggmh S496 16,3
Error in line 14: gyeM5ggmh S186 54,3
Error in line 31: WqY1f S496 98,5
Error in line 25: lkH S64 14,9
Error in line 38: WqY1f S186 -4,9
